--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backendproject",
   "version": "1.0.0",
   "description": "A Backend Project.",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "JavaScript",
@@ -13,5 +14,8 @@
     "Mongoose."
   ],
   "author": "Prince",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
